Fix overflowing map size

--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -20,4 +20,8 @@
   margin-bottom: 30px;
 }
 
-/* Customizing find me button */
+@media (min-width: 1024px) {
+  #map {
+  height: calc(100vh - 74px);
+}
+}
